Fixed z-index nav burguer

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -26,7 +26,6 @@ h1 {
     grid-template-columns: 2fr 1fr;
     gap: 2rem;
     backdrop-filter: blur(5px);
-    z-index: -1;
 }
 
 .welcome__musician {
@@ -86,7 +85,6 @@ h1 {
     background-color: rgba(217,217, 217, .7);
     padding: 2rem;
     backdrop-filter: blur(5px);
-    z-index: 0;
 }
 
 .instruments__title {
